add recycler view

--- a/app/src/main/res/layout/fragment_countries.xml
+++ b/app/src/main/res/layout/fragment_countries.xml
@@ -15,13 +15,18 @@
 <!--        app:layout_constraintRight_toRightOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@id/saisie_memo"/>-->
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_countries"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 <!--    SAMPLE CODE TO REMIND BEFORE DELETE-->
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:text="@string/hello_blank_fragment" />-->
 
 
 
